--- a/pages/index/detail.wxml
+++ b/pages/index/detail.wxml
@@ -6,5 +6,5 @@
     <text class="price">${{item.price}}</text>
   </view>
   <text class='description'>{{item.description}}</text>  
-  <button class='btn-fix' type="primary">马上购买</button>
+  <button class='btn-fix' type="primary" bindtap="purchase">马上购买</button>
 </view>
